--- a/iCabinet/MainWindow.xaml
+++ b/iCabinet/MainWindow.xaml
@@ -8,19 +8,20 @@
         Title="iCabinet" Height="350" Width="625">
     <Window.Resources>
         <Style TargetType="Button">
-            <Setter Property="Height" Value="30"></Setter>
-            <Setter Property="Width" Value="100"></Setter>
+            <Setter Property="Height" Value="50"></Setter>
+            <Setter Property="Width" Value="160"></Setter>
             <Setter Property="Margin" Value="11,0"></Setter>
+            <Setter Property="BorderThickness" Value="0"></Setter>
         </Style>
         <Style x:Key="btnIcon" TargetType="Image">
-            <Setter Property="Height" Value="24"></Setter>
-            <Setter Property="Width" Value="24"></Setter>
+            <Setter Property="Height" Value="36"></Setter>
+            <Setter Property="Width" Value="36"></Setter>
         </Style>
         <Style TargetType="StackPanel">
             <Setter Property="Orientation" Value="Horizontal"></Setter>
         </Style>
         <Style TargetType="TextBlock">
-            <Setter Property="FontSize" Value="14"></Setter>
+            <Setter Property="FontSize" Value="16"></Setter>
             <Setter Property="Margin" Value="11,0,0,0"></Setter>
         </Style>
         <Style TargetType="DataGrid">
@@ -71,6 +72,43 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <SolidColorBrush x:Key="ListBox.Static.Background" Color="#FFFFFFFF"/>
+        <SolidColorBrush x:Key="ListBox.Static.Border" Color="#FFABADB3"/>
+        <SolidColorBrush x:Key="ListBox.Disabled.Background" Color="#FFFFFFFF"/>
+        <SolidColorBrush x:Key="ListBox.Disabled.Border" Color="#FFD9D9D9"/>
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="{x:Type ListBoxItem}">
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="Padding" Value="4,1"/>
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+            <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="TextElement.Foreground" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid x:Name="actionGrid">
@@ -78,27 +116,27 @@
                 <Button Tag="Borrow" Click="Button_Click">
                     <StackPanel>
                         <Image Style="{StaticResource btnIcon}" Source="./Images/borrow.png"></Image>
-                        <TextBlock>借用</TextBlock>
+                        <TextBlock VerticalAlignment="Center">借用</TextBlock>
                     </StackPanel>
                 </Button>
                 <Button Tag="Return" Click="Button_Click">
                     <StackPanel>
                         <Image Style="{StaticResource btnIcon}" Source="./Images/return.png"></Image>
-                        <TextBlock>归还</TextBlock>
+                        <TextBlock VerticalAlignment="Center">归还</TextBlock>
                     </StackPanel>
                 </Button>
             </StackPanel>
-            <Image MouseLeftButtonDown="Image_MouseLeftButtonDown" Style="{StaticResource btnIcon}" Source="./Images/about.png" Margin="0,0,11,11" HorizontalAlignment="Right" VerticalAlignment="Bottom"></Image>
+            <Image MouseLeftButtonDown="Image_MouseLeftButtonDown" Width="20" Height="20" Source="./Images/about.png" Margin="0,0,11,11" HorizontalAlignment="Right" VerticalAlignment="Bottom"></Image>
         </Grid>
         <Grid x:Name="contentGrid" Visibility="Collapsed">
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition Height="50"/>
+                <RowDefinition Height="70"/>
             </Grid.RowDefinitions>
             <Button Tag="Back" Click="Button_Click" Grid.Row="1">
                 <StackPanel>
                     <Image Style="{StaticResource btnIcon}" Source="./Images/back.png"></Image>
-                    <TextBlock>返回</TextBlock>
+                    <TextBlock VerticalAlignment="Center">返回</TextBlock>
                 </StackPanel>
             </Button>
         </Grid>
